--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.13"
 pyqt5 = "^5.15.11"
 pyqt5-qt5 = "^5.15.16"
 pyqt5-sip = "^12.16.1"
@@ -18,6 +18,7 @@ python-dotenv = "^1.0.1"
 qdarkstyle = "^3.2.3"
 qtpy = "^2.4.2"
 pyperclip = "^1.9.0"
+pyinstaller = "^6.13.0"
 
 
 [build-system]
